# GeoTalosProd

./: .env.docker  .gitignore  CRITICAL_ISSUES_SEGMENTATION.md  Dockerfile  README.md  alembic.ini  check_titiler.py  combine_code.py.save  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_7f1c1a0a_create_users.py  001_a10f0c01_create_organizations.py  001_c30f0c03_create_org_memberships.py  002_1f2b3c4d_create_organizations.py  002_b20f0c02_create_users.py  002_f60f0c06_enable_rls.py  003_2a3b4c5d_create_organization_members.py  003_g70f0c07_create_pending_invitations.py  004_3c4d5e6f_create_projects.py  004_d40f0c04_create_projects.py  005_4d5e6f70_create_maps.py  005_e50f0c05_create_project_members.py  006_5e6f7081_create_datasets.py  006_h80f0c08_create_datasets.py  007_6f708192_create_styles.py  007_i90f0c09_create_label_schemas.py  008_708192a3_create_annotation_schemas.py  (+59 more)
app/: config.py  main.py
app/api/: deps.py
docs/: architecture.md  index.md  media-links.md  setup.md  workflows.md
evaluation/: build_tables.py  clone_benchmark_pipelines.py  evaluation_setup.md  task_spec.py
infra/: README.md
scripts/: vectorize_raster_mask.py
tests/: conftest.py  integration_map_scenario.py  run_tests.sh  test_annotation_set_collections.py  test_annotation_set_export.py  test_automation_duplicate.py  test_automation_map_nodes.py  test_automation_model_comparison.py  test_core_crud_endpoints.py  test_inference.py  test_inference_jobs.py  test_map_aoi_features.py  test_map_aoi_followups.py  test_map_aoi_state.py  test_upload_endpoints.py
(+201 files in other folders)
